--- a/fiber.html
+++ b/fiber.html
@@ -7,6 +7,68 @@
     <title>Fiber</title>
 </head>
 <body>
-    
+    <main class="pink df">
+        <header>
+            <div class="topleft">
+                <title>fibre</title>
+            </div> 
+            <nav>
+                <ul class="topmid df">
+                    <li>Community</li>
+                    <li>Pricing</li>
+                    <li>Features</li>
+                </ul>
+            </nav> 
+            <div class="topright">
+                <a href="#signin">Sign Up</a>
+                <button class="signup">Sign Up</button>
+            </div>
+        </header>
+        <section class="pinkmid df">
+            <section class="pinkmidleft df">
+                <figure class="ratings df">
+                    <figure class="stars df">
+                        <img src="Assets/star.svg" alt="" srcset="">
+                        <img src="Assets/star.svg" alt="" srcset="">
+                        <img src="Assets/star.svg" alt="" srcset="">
+                        <img src="Assets/star.svg" alt="" srcset="">
+                        <img src="Assets/star.svg" alt="" srcset="">
+                    </figure>
+                    <figcaption class="ratingsreviews">
+                        <p>Rated 4.8/5(243 reviews)</p>
+                    </figcaption>
+                </figure>
+                <div class="pinkh1">
+                    <h1>Create your portfolio in minutes.</h1>
+                    <p>With Fiber, you can setup your own personal portfolio in minutes with dozens of premade,
+                        beautiful templates.
+                    </p>
+                </div>
+                <section class="freetrails">
+                    <button class="free">Start Free Trial</button>
+                    <a href="#view">View Examples</a>
+                </section>
+                <figure class="tick df">
+                    <figure class="lefttick">
+                        <img src="Assets/Checkmark.svg" alt="">
+                        <figcaption>No Credit Card Required</figcaption>
+                    </figure>
+                    <figure class="lefttick">
+                        <img src="Assets/Checkmark.svg" alt="">
+                        <figcaption>No Credit Card Required</figcaption>
+                    </figure>
+                </figure>
+            </section>
+            <section class="pinkmidright">
+                <figure>
+                    <img src="Assets/hero-Illustration.png" alt="">
+                </figure>
+            </section>
+        </section>
+
+    </main>
+    <main class="white">
+
+    </main>
 </body>
 </html>
