--- a/fiber.html
+++ b/fiber.html
@@ -68,6 +68,48 @@
 
     </main>
     <main class="white">
+        <div class="whiteabout">
+            <p>
+                Why Fiber?
+            </p>
+            <h3>A good portfolio means good employability.</h3>
+        </div>
+        <section class="features df">
+            <section class="featuresleft df column">
+                <img src="Assets/time.svg" alt="">
+                <b>Build in minutes</b>
+                <p>With a selection of premade templates,
+                    you can build out a portfolio in less than 10 minutes.
+                </p>
+            </section>
+            <section class="featuresmid df column">
+                <img src="Assets/code.svg" alt="">
+                <b>Add custom CSS</b>
+                <p>Customize your personal portfolio even
+                    more with the ability to add your own custom CSS styles.
+                </p>
+            </section>
+            <section class="featuresright df column">
+                <img src="Assets/allSizes.svg" alt="">
+                <b>Responsive</b>
+                <p>All Fiber templates are fully responsive to ensure
+                    the experience is seemless across all devices.
+                </p>
+            </section>
+        </section>
+        <section class="blue df">
+            <section class="blueleft">
+                <h1>Diversify your portfolio.</h1>
+                <p>Create an even more impressive portfolio by creating case studies for your projects.
+                    Simply follow our step-by-step guide.
+                </p>
+                <button class="bluefree">Start Free Trial</button>
+
+            </section>
+            <figure class="blueright">
+                <img src="Assets/Page Image.png" alt="">
+            </figure>
+        </section>
 
     </main>
 </body>
