--- a/fiber.html
+++ b/fiber.html
@@ -10,7 +10,7 @@
     <main class="pink df">
         <header>
             <div class="topleft">
-                <title>fibre</title>
+                <a href="#fiber">Fibre</a>
             </div> 
             <nav>
                 <ul class="topmid df">
@@ -108,8 +108,107 @@
             </section>
             <figure class="blueright">
                 <img src="Assets/Page Image.png" alt="">
+                <figcaption class="br">Never miss an investment</figcaption>
             </figure>
         </section>
+        <section class="reviews df">
+            <section class="reviewsinfo df column">
+                <div class="reviewstop df">
+                    <figure>
+                        <img src="Assets/User Avatar 2.svg" alt="">
+                    </figure>
+                    <div class="name">
+                        <h4>Sarah Andrews</h4>
+                        <p>$100k in revenue</p>
+                    </div>
+                </div>
+                <div class="reviewsmid">
+                    <p>I have been getting A LOT of leads ever since I used
+                         Fibre's premade templates, now I just need to work
+                         on my case studies and I'll be ready to go!
+                    </p>
+                </div>
+                <a href="#mathew">
+                    <button>View Mathew's Portfolio</button>
+                </a>
+            </section>
+            <section class="reviewsinfo df column">
+                <div class="reviewstop df">
+                    <figure>
+                        <img src="Assets/User Avatar.svg" alt="">
+                    </figure>
+                    <div class="name">
+                        <h4>Janice Dave</h4>
+                        <p>$30k in revenue</p>
+                    </div>
+                </div>
+                <div class="reviewsmid">
+                    <p>I only just started freelancing this year and 
+                        have already made more than I ever made
+                        in my full-time job. The templates are
+                        so amazing.
+                    </p>
+                </div>
+                <a href="#sarah">
+                    <button>View Janice's Portfolio</button>
+                </a>
+            </section>
+            <section class="reviewsinfo df column">
+                <div class="reviewstop df">
+                    <figure>
+                        <img src="Assets/User Avatar 2.svg" alt="">
+                    </figure>
+                    <div class="name">
+                        <h4>Sarah Andrews</h4>
+                        <p>$ 100k in revenue</p>
+                    </div>
+                </div>
+                <div class="reviewsmid">
+                    <p>Setting up my portfolio with Fiber took no more than 10 minutes.
+                        Since then, my portfolio has attracted a lot of clients and made me more than $100k.
+                    </p>
+                </div>
+                <a href="#sarah">
+                    <button>View Sarah's Portfolio</button>
+                </a>
+            </section>
+        </section>
+        <footer class="df">
+            <section class="Fiber">
+                <h3>Fiber</h3>
+                <p>
+                    With Fiber, you cansetup your own personal portfolio
+                    in minutes with dozens of premade, 
+                    beautiful templates.
+                    <br><br>Made with ♥ in the Netherlands.
+                </p>
+            </section>
+            <section class="Sitemap">
+                <h3>Sitemap</h3>
+                <a href="#home">Homepage</a>
+                <a href="#pricing">Pricing</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#features">Features</a>
+            </section>
+            <section class="Resources">
+                <h3>Resouces</h3>
+                <a href="#support">Support</a>
+                <a href="#contact">Contact</a>
+                <a href="#faq">FAQ</a>
+            </section>
+            <section class="Company">
+                <h3>Company</h3>
+                <a href="#about">About</a>
+                <a href="#customer">Customers</a>
+                <a href="#blog">Blog</a>
+            </section>
+            <section class="Portfolios">
+                <h3>Resouces</h3>
+                <a href="#sarah">Sarah Andrew</a>
+                <a href="#mathew">Mathew Higgins</a>
+                <a href="#janice">Janice Dave</a>
+            </section>
+        </footer>
 
     </main>
 </body>
