column added to class for flex

--- a/fiber.html
+++ b/fiber.html
@@ -8,10 +8,10 @@
     <title>Fiber</title>
 </head>
 <body>
-    <main class="pink df">
-        <header>
+    <main class="pink df column">
+        <header class="df">
             <div class="topleft">
-                <a href="#fiber">Fibre</a>
+                <a href="#fiber">Fiber</a>
             </div> 
             <nav>
                 <ul class="topmid df">
@@ -26,7 +26,7 @@
             </div>
         </header>
         <section class="pinkmid df">
-            <section class="pinkmidleft df">
+            <section class="pinkmidleft df column">
                 <figure class="ratings df">
                     <figure class="stars df">
                         <img src="Assets/star.svg" alt="" srcset="">
@@ -50,11 +50,11 @@
                     <a href="#view">View Examples</a>
                 </section>
                 <figure class="tick df">
-                    <figure class="lefttick">
+                    <figure class="lefttick df">
                         <img src="Assets/Checkmark.svg" alt="">
                         <figcaption>No Credit Card Required</figcaption>
                     </figure>
-                    <figure class="lefttick">
+                    <figure class="lefttick df">
                         <img src="Assets/Checkmark.svg" alt="">
                         <figcaption>No Credit Card Required</figcaption>
                     </figure>
@@ -184,14 +184,14 @@
                     <br><br>Made with ♥ in the Netherlands.
                 </p>
             </section>
-            <section class="Sitemap">
+            <section class="Sitemap df column">
                 <h3>Sitemap</h3>
                 <a href="#home">Homepage</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#testimonials">Testimonials</a>
                 <a href="#features">Features</a>
             </section>
-            <section class="Resources">
+            <section class="Resources df column">
                 <h3>Resouces</h3>
                 <a href="#support">Support</a>
                 <a href="#contact">Contact</a>
@@ -203,7 +203,7 @@
                 <a href="#customer">Customers</a>
                 <a href="#blog">Blog</a>
             </section>
-            <section class="Portfolios">
+            <section class="Portfolios df column">
                 <h3>Resouces</h3>
                 <a href="#sarah">Sarah Andrew</a>
                 <a href="#mathew">Mathew Higgins</a>
