--- a/fiber.html
+++ b/fiber.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav> 
             <div class="topright">
-                <a href="#signin">Sign Up</a>
+                <a href="#signin">Sign In</a>
                 <button class="signup">Sign Up</button>
             </div>
         </header>
@@ -39,7 +39,7 @@
                         <img src="Assets/star.svg" alt="" srcset="">
                     </figure>
                     <figcaption class="ratingsreviews">
-                        <p>Rated 4.8/5(243 reviews)</p>
+                        <p>Rated 4.8/5 (243 reviews)</p>
                     </figcaption>
                 </figure>
                 <div class="pinkh1">
@@ -59,11 +59,11 @@
                     </figure>
                     <figure class="lefttick df">
                         <img src="Assets/Checkmark.svg" alt="">
-                        <figcaption>No Credit Card Required</figcaption>
+                        <figcaption>10 Free Templates</figcaption>
                     </figure>
                 </figure>
             </section>
-            <section class="pinkmidright">
+            <section class="pinkmidright df">
                 <figure>
                     <img src="Assets/hero-Illustration.png" alt="">
                 </figure>
