--- a/fiber.html
+++ b/fiber.html
@@ -18,9 +18,9 @@
             </div> 
             <nav>
                 <ul class="topmid df">
-                    <li>Community</li>
-                    <li>Pricing</li>
-                    <li>Features</li>
+                    <li><a href="#community">Community</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="features">Features</a></li>
                 </ul>
             </nav> 
             <div class="topright">
