html review changed

--- a/fiber.html
+++ b/fiber.html
@@ -76,7 +76,7 @@
             <p>
                 Why Fiber?
             </p>
-            <h3>A good portfolio means good employability.</h3>
+            <h1>A good portfolio means good employability.</h1>
         </div>
         <section class="features df">
             <section class="featuresleft df column">
@@ -112,18 +112,36 @@
             </section>
             <figure class="blueright">
                 <img src="Assets/Page Image.png" alt="">
-                <figcaption class="br">Never miss an investment</figcaption>
             </figure>
         </section>
         <section class="reviews df">
             <section class="reviewsinfo df column">
                 <div class="reviewstop df">
                     <figure>
-                        <img src="Assets/User Avatar 2.svg" alt="">
+                        <img src="Assets/User Avatar 32.svg" alt="">
                     </figure>
                     <div class="name">
                         <h4>Sarah Andrews</h4>
-                        <p>$100k in revenue</p>
+                        <p>$ 100k in revenue</p>
+                    </div>
+                </div>
+                <div class="reviewsmid">
+                    <p>Setting up my portfolio with Fiber took no more than 10 minutes.
+                        Since then, my portfolio has attracted a lot of clients and made me more than $100k.
+                    </p>
+                </div>
+                <a href="#sarah">
+                    <button>View Sarah's Portfolio</button>
+                </a>
+            </section>
+            <section class="reviewsinfo df column">
+                <div class="reviewstop df">
+                    <figure>
+                        <img src="Assets/User Avatar 2.svg" alt="">
+                    </figure>
+                    <div class="name">
+                        <h4>Mathew Higgins</h4>
+                        <p>$20k in revenue</p>
                     </div>
                 </div>
                 <div class="reviewsmid">
@@ -157,63 +175,44 @@
                     <button>View Janice's Portfolio</button>
                 </a>
             </section>
-            <section class="reviewsinfo df column">
-                <div class="reviewstop df">
-                    <figure>
-                        <img src="Assets/User Avatar 2.svg" alt="">
-                    </figure>
-                    <div class="name">
-                        <h4>Sarah Andrews</h4>
-                        <p>$ 100k in revenue</p>
-                    </div>
-                </div>
-                <div class="reviewsmid">
-                    <p>Setting up my portfolio with Fiber took no more than 10 minutes.
-                        Since then, my portfolio has attracted a lot of clients and made me more than $100k.
-                    </p>
-                </div>
-                <a href="#sarah">
-                    <button>View Sarah's Portfolio</button>
-                </a>
-            </section>
+           
         </section>
-        <footer class="df">
-            <section class="Fiber">
-                <h3>Fiber</h3>
-                <p>
-                    With Fiber, you cansetup your own personal portfolio
-                    in minutes with dozens of premade, 
-                    beautiful templates.
-                    <br><br>Made with ♥ in the Netherlands.
-                </p>
-            </section>
-            <section class="Sitemap df column">
-                <h3>Sitemap</h3>
-                <a href="#home">Homepage</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#features">Features</a>
-            </section>
-            <section class="Resources df column">
-                <h3>Resouces</h3>
-                <a href="#support">Support</a>
-                <a href="#contact">Contact</a>
-                <a href="#faq">FAQ</a>
-            </section>
-            <section class="Company">
-                <h3>Company</h3>
-                <a href="#about">About</a>
-                <a href="#customer">Customers</a>
-                <a href="#blog">Blog</a>
-            </section>
-            <section class="Portfolios df column">
-                <h3>Resouces</h3>
-                <a href="#sarah">Sarah Andrew</a>
-                <a href="#mathew">Mathew Higgins</a>
-                <a href="#janice">Janice Dave</a>
-            </section>
-        </footer>
-
     </main>
+    <footer class="df">
+        <section class="Fiber">
+            <h3>Fiber</h3>
+            <p>
+                With Fiber, you cansetup your own personal portfolio
+                in minutes with dozens of premade, 
+                beautiful templates.
+                <br><br>Made with ♥ in the Netherlands.
+            </p>
+        </section>
+        <section class="Sitemap df column">
+            <h3>Sitemap</h3>
+            <a href="#home">Homepage</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#features">Features</a>
+        </section>
+        <section class="Resources df column">
+            <h3>Resouces</h3>
+            <a href="#support">Support</a>
+            <a href="#contact">Contact</a>
+            <a href="#faq">FAQ</a>
+        </section>
+        <section class="Company">
+            <h3>Company</h3>
+            <a href="#about">About</a>
+            <a href="#customer">Customers</a>
+            <a href="#blog">Blog</a>
+        </section>
+        <section class="Portfolios df column">
+            <h3>Resouces</h3>
+            <a href="#sarah">Sarah Andrew</a>
+            <a href="#mathew">Mathew Higgins</a>
+            <a href="#janice">Janice Dave</a>
+        </section>
+    </footer>
 </body>
 </html>
