footer company column

--- a/fiber.html
+++ b/fiber.html
@@ -201,7 +201,7 @@
             <a href="#contact">Contact</a>
             <a href="#faq">FAQ</a>
         </section>
-        <section class="Company">
+        <section class="Company df column">
             <h3>Company</h3>
             <a href="#about">About</a>
             <a href="#customer">Customers</a>
