--- a/fiber.html
+++ b/fiber.html
@@ -17,7 +17,7 @@
                 <a href="#fiber">Fiber</a>
             </div> 
             <nav>
-                <ul class="topmid df">
+                <ul class="topmid df" id="topmid">
                     <li><a href="#community">Community</a></li>
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="features">Features</a></li>
@@ -26,6 +26,9 @@
             <div class="topright">
                 <a href="#signin">Sign In</a>
                 <button class="signup">Sign Up</button>
+            </div>
+            <div id="hidden">
+                <img src="Assets/Hamburger Menu.svg" alt="">
             </div>
         </header>
         <section class="pinkmid df">
@@ -179,7 +182,7 @@
         </section>
     </main>
     <footer class="df">
-        <section class="Fiber">
+        <section class="Fiber down">
             <h3>Fiber</h3>
             <p>
                 With Fiber, you cansetup your own personal portfolio
@@ -188,26 +191,26 @@
                 <br><br>Made with ♥ in the Netherlands.
             </p>
         </section>
-        <section class="Sitemap df column">
+        <section class="Sitemap df column down">
             <h3>Sitemap</h3>
             <a href="#home">Homepage</a>
             <a href="#pricing">Pricing</a>
             <a href="#testimonials">Testimonials</a>
             <a href="#features">Features</a>
         </section>
-        <section class="Resources df column">
+        <section class="Resources df column down">
             <h3>Resouces</h3>
             <a href="#support">Support</a>
             <a href="#contact">Contact</a>
             <a href="#faq">FAQ</a>
         </section>
-        <section class="Company df column">
+        <section class="Company df column down">
             <h3>Company</h3>
             <a href="#about">About</a>
             <a href="#customer">Customers</a>
             <a href="#blog">Blog</a>
         </section>
-        <section class="Portfolios df column">
+        <section class="Portfolios df column down">
             <h3>Resouces</h3>
             <a href="#sarah">Sarah Andrew</a>
             <a href="#mathew">Mathew Higgins</a>
