--- a/fiber.html
+++ b/fiber.html
@@ -28,7 +28,7 @@
                 <button class="signup">Sign Up</button>
             </div>
             <div id="hidden">
-                <img src="Assets/Hamburger Menu.svg" alt="">
+                <img onclick="navbar()"src="Assets/Hamburger Menu.svg" alt="">
             </div>
         </header>
         <section class="pinkmid df">
@@ -217,5 +217,6 @@
             <a href="#janice">Janice Dave</a>
         </section>
     </footer>
+    <script src="fiber.js"></script>
 </body>
 </html>
