a href for sign up

--- a/fiber.html
+++ b/fiber.html
@@ -25,7 +25,8 @@
             </nav> 
             <div class="topright">
                 <a href="#signin">Sign In</a>
-                <button class="signup">Sign Up</button>
+                <a href="sign.html"><button class="signup">Sign Up</button> </a>
+            
             </div>
             <div id="hidden">
                 <img onclick="navbar()"src="Assets/Hamburger Menu.svg" alt="">
