--- a/sign.html
+++ b/sign.html
@@ -44,8 +44,8 @@
             <figure id="imgg"onmouseover="hovershow()" onmouseout="hoverhide()">
                 
                 <div class="hoverr df " id="hoverr">
-                    <h3 id="hoverleft">&lt;</h3>
-                    <h3 id="hoverright">></h3>
+                    <h3 id="hoverleft" onclick="backimg()">&lt;</h3>
+                    <h3 id="hoverright" onclick="nextimg()">&gt;</h3>
                 </div>
                 <img id="blue1" src="Assets/Sign Up Image.png" alt=""srcset="">
                 <img id="blue2" src="Assets/Page Image.png" alt="">
