--- a/fiber.html
+++ b/fiber.html
@@ -20,7 +20,7 @@
                 <ul class="topmid df" id="topmid">
                     <li><a href="#community">Community</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="features">Features</a></li>
+                    <li><a href="#features">Features</a></li>
                 </ul>
             </nav> 
             <div class="topright">
@@ -111,7 +111,10 @@
                 <p>Create an even more impressive portfolio by creating case studies for your projects.
                     Simply follow our step-by-step guide.
                 </p>
-                <button class="bluefree">Start Free Trial</button>
+                <a href="sign.html">
+                    <button class="bluefree">Start Free Trial</button>
+                </a>
+                
 
             </section>
             <figure class="blueright">
