--- a/sign.html
+++ b/sign.html
@@ -47,10 +47,10 @@
                     <h3 id="hoverleft" onclick="backimg()">&lt;</h3>
                     <h3 id="hoverright" onclick="nextimg()">&gt;</h3>
                 </div>
-                <img id="blue1" src="Assets/Sign Up Image.png" alt=""srcset="">
-                <img id="blue2" src="Assets/Page Image.png" alt="">
-                <img id="blue3" src="Assets/Sign Up Image.png" alt=""srcset="">
-                <img id="blue4" src="Assets/Page Image.png" alt="">   
+                <img id="blue1" value="1" src="Assets/Sign Up Image.png" alt=""srcset="">
+                <img id="blue2" value="2" src="Assets/Page Image.png" alt="">
+                <img id="blue3" value="3" src="Assets/Sign Up Image.png" alt=""srcset="">
+                <img id="blue4" value="4" src="Assets/Page Image.png" alt="">   
             </figure>
             
             <figcaption class="df column">
