--- a/sign.html
+++ b/sign.html
@@ -14,7 +14,7 @@
     <main class="signupform">
         <h3>Fiber</h3>
         <h1>Create your Fiber account</h1>
-        <form clss="df column" action="">
+        <form class="df column" action="">
             <div class="name df column gap">
                 <div><label for="">Your Name</label></div>
                 <input required type="text" placeholder="John Doe">
